apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_with_implementers_directive_not_defined.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: vec![\"read\".to_string()], result: doc, paths\n}"
---
query:

        query TestIssue {
          idList(id: "1") {
            activeId 
          }
        }
    
extracted_policies: {"read"}
successful policies: ["read"]
filtered:
query TestIssue {
  idList(id: "1") {
    activeId
  }
}

paths: []
