apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__interface_with_implementor_not_defining_field_level_policy_with_request_not_sending_policies.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult\n{\n    query: QUERY, extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(), result: doc, paths\n}"
---
query:

        query TestIssue {
          index(id: "1") {
            index
          }
        }
    
extracted_policies: {"read"}
successful policies: []
filtered:

paths: ["/index/index"]
