apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__or_and-3.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_policies: &extracted_policies,\n    successful_policies: [\"read user\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        {
            customer {
                id
            }
        }
        
extracted_policies: {"admin", "internal", "read user"}
successful policies: ["read user"]
filtered:

paths: ["/customer"]
