apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__query_field_alias.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_policies: &extracted_policies,\n    successful_policies: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            topProducts {
                type
            }

            moi: me {
                name
            }
        }
        
extracted_policies: {"profile", "read user", "read username"}
successful policies: []
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/me"]
